--- a/pages/about.html
+++ b/pages/about.html
@@ -2,9 +2,9 @@
 <html lang="zh">
 <head>
     <meta charset="utf-8">
-    <title>lizherui的程序世界</title>
+    <title>奇百的博客</title>
     <meta name="description" content="">
-    <meta name="author" content="lizherui">
+    <meta name="author" content="奇百">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -19,8 +19,8 @@
     <link href="../theme/pygments.css" rel="stylesheet">
 
     <!-- So Firefox can bookmark->"abo this site" -->
-        <link href="http://www.lizherui.com/feeds\all.atom.xml" rel="alternate" title="lizherui的程序世界" type="application/atom+xml">
-        <link href="http://www.lizherui.com/feeds/all.rss.xml" rel="alternate" title="lizherui的程序世界" type="application/rss+xml">
+        <link href="http://cheniqit.github.com/feeds\all.atom.xml" rel="alternate" title="奇百的博客" type="application/atom+xml">
+        <link href="http://cheniqit.github.com/feeds/all.rss.xml" rel="alternate" title="奇百的博客" type="application/rss+xml">
 
 </head>
 
@@ -36,7 +36,7 @@
              <span class="icon-bar"></span>
          </a>
 
-        <a class="brand" href="..">lizherui的程序世界</a>
+        <a class="brand" href="..">奇百的博客</a>
 
         <div class="nav-collapse">
         <ul class="nav">
@@ -88,8 +88,8 @@
 
 
 
-                <li><a href="http://www.lizherui.com/feeds\all.atom.xml" rel="alternate">Atom feed</a></li>
-                <li><a href="http://www.lizherui.com/feeds/all.rss.xml" rel="alternate">RSS feed</a></li>
+                <li><a href="http://cheniqit.github.com/feeds\all.atom.xml" rel="alternate">Atom feed</a></li>
+                <li><a href="http://cheniqit.github.com/feeds/all.rss.xml" rel="alternate">RSS feed</a></li>
 
             </ul>
             </div>
@@ -101,7 +101,7 @@
                 Categories
                 </li>
                 
-                <li><a href="../category/sheng-huo.html">生活</a></li>
+                <li><a href="../category/life.html">Life</a></li>
                    
             </ul>
             </div>
@@ -136,13 +136,13 @@
     </div>     </div> 
 <footer>
 <br />
-<p><a href="..">lizherui的程序世界</a> &copy; lizherui 2014</p>
+<p><a href="..">奇百的博客</a> &copy; 奇百 2014</p>
 </footer>
 
 </div> <!-- /container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="../theme/bootstrap-collapse.js"></script>
-<a href="https://github.com/lizherui"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub" /></a>
+<a href="https://cheniqit.github.com"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub" /></a>
  
 </body>
 </html>
