--- a/archives.html
+++ b/archives.html
@@ -110,6 +110,7 @@
                 <li><a href="http://www.zhihu.com/">Zhihu</a></li>
                 <li><a href="http://python.org/">Python</a></li>
                 <li><a href="http://docs.getpelican.com/">Pelican</a></li>
+                <li><a href="http://maxiang.info/">Maxing</a></li>
             </ul>
             </div>
 
