--- a/categories.html
+++ b/categories.html
@@ -55,7 +55,7 @@
 
         <div class="span9">
 <ul>
-	<li><a href="./category/jin-rong.html">金融</li>
+	<li><a href="./category/finance.html">finance</li>
 	<li><a href="./category/life.html">Life</li>
 </ul>
 
@@ -87,7 +87,7 @@
                 Categories
                 </li>
                 
-                <li><a href="./category/jin-rong.html">金融</a></li>
+                <li><a href="./category/finance.html">finance</a></li>
                 <li><a href="./category/life.html">Life</a></li>
                    
             </ul>
@@ -125,7 +125,7 @@
     </div>     </div> 
 <footer>
 <br />
-<p><a href=".">奇百的博客</a> &copy; 奇百 2014</p>
+<p><a href=".">奇百的博客</a> &copy; 奇百 2015</p>
 </footer>
 
 </div> <!-- /container -->
