--- a/pages/about.html
+++ b/pages/about.html
@@ -102,7 +102,7 @@
                 Categories
                 </li>
                 
-                <li><a href="../category/jin-rong.html">金融</a></li>
+                <li><a href="../category/finance.html">finance</a></li>
                 <li><a href="../category/life.html">Life</a></li>
                    
             </ul>
@@ -140,7 +140,7 @@
     </div>     </div> 
 <footer>
 <br />
-<p><a href="..">奇百的博客</a> &copy; 奇百 2014</p>
+<p><a href="..">奇百的博客</a> &copy; 奇百 2015</p>
 </footer>
 
 </div> <!-- /container -->
