--- a/categories.html
+++ b/categories.html
@@ -55,7 +55,7 @@
 
         <div class="span9">
 <ul>
-	<li><a href="./category/finance.html">finance</li>
+	<li><a href="./category/finance.html">Finance</li>
 	<li><a href="./category/life.html">Life</li>
 </ul>
 
@@ -87,7 +87,7 @@
                 Categories
                 </li>
                 
-                <li><a href="./category/finance.html">finance</a></li>
+                <li><a href="./category/finance.html">Finance</a></li>
                 <li><a href="./category/life.html">Life</a></li>
                    
             </ul>
