--- a/pages/about.html
+++ b/pages/about.html
@@ -102,7 +102,7 @@
                 Categories
                 </li>
                 
-                <li><a href="../category/finance.html">finance</a></li>
+                <li><a href="../category/finance.html">Finance</a></li>
                 <li><a href="../category/life.html">Life</a></li>
                    
             </ul>
